# reseller-inventory

./: .gitignore  README.md  package-lock.json  package.json
.claude/: launch.json  static-server.js
.github/workflows/: build-mac.yml  release.yml
docs/superpowers/plans/: 2026-06-09-csv-export-and-github-updater.md
docs/superpowers/specs/: 2026-06-09-csv-export-and-github-updater-design.md
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
